--- a/indexpy/openapi/swagger.html
+++ b/indexpy/openapi/swagger.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.30.0/swagger-ui-bundle.js"></script>
     <script>
         const ui = SwaggerUIBundle({
-            url: './get',
+            url: './docs',
             dom_id: '#swagger-ui',
             presets: [
                 SwaggerUIBundle.presets.apis,
