--- a/indexpy/openapi/redoc.html
+++ b/indexpy/openapi/redoc.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <redoc spec-url='./docs'></redoc>
+    <redoc spec-url='./json'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
 </body>
 
