--- a/indexpy/openapi/swagger.html
+++ b/indexpy/openapi/swagger.html
@@ -8,9 +8,9 @@
 
 <body>
     <div id="swagger-ui"></div>
-    <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.30.0/swagger-ui-bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.50.0/swagger-ui-bundle.js"></script>
     <script>
-        const ui = SwaggerUIBundle({
+        SwaggerUIBundle({
             url: './json',
             dom_id: '#swagger-ui',
             presets: [
@@ -20,7 +20,8 @@
             layout: "BaseLayout",
             deepLinking: true,
             showExtensions: true,
-            showCommonExtensions: true
+            showCommonExtensions: true,
+            persistAuthorization: true
         })
 
     </script>
