--- a/indexpy/openapi/swagger.html
+++ b/indexpy/openapi/swagger.html
@@ -11,16 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.48.0/swagger-ui-bundle.js"></script>
     <script>
         let version = null;
-
-        const renderUI = async () => {
-            const resp = await fetch("./json");
-            const spec = await resp.json();
-            
-            if (resp.headers.get("hash") === version){
-                return;
+        const evtSource = new EventSource("./heartbeat");
+        evtSource.onmessage = function (event) {
+            if (event.id === version) {
+                return
             }
-            
-            version = resp.headers.get("hash");
+            version = event.id;
+            const spec = JSON.parse(event.data);
+
             SwaggerUIBundle({
                 spec,
                 dom_id: '#swagger-ui',
@@ -35,10 +33,6 @@
                 persistAuthorization: true
             })
         }
-
-        renderUI();
-        setInterval(renderUI, 2000);
-
     </script>
 </body>
 
